# finnerio-music-backoffice

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  shell.py
app/controllers/: pages.py
app/templates/pages/: placeholder.home.html
src/: __init__.py  forms.py  settings.py
src/controllers/: pages.py
src/templates/layouts/: main.html
src/templates/pages/: albums.html  artists.html  genres.html  song.html  songs.html
tests/: helpers.py
