[tool.poetry]
name = "y"
version = "0.0.1"
description = ""
authors = ["gonz <gonzasestopal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "==2.2.2"
Flask-WTF = "==1.0.1"
requests = "==2.28.1"
WTForms= "==3.0.1"
python-dotenv = "^0.10.5"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pylint = "^2.4.4"
pre-commit = "^2.0.1"
isort = "^4.3.21"

[tool.black]
line-length = 99
target-version = ['py39']
include = '\.pyi?$'
exclude = '/(\.eggs|\.git|\.venv|\.scrapy)/'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
